fix title overflow when it's too long for the bookcard

--- a/style/objects/_book-card.scss
+++ b/style/objects/_book-card.scss
@@ -31,6 +31,11 @@
   &__title {
     font-size: $s-lg;
     font-weight: bold;
+    width: 240px;
+    display: inline-block;
+    white-space:nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
 
   &__authors {
